--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
         <img src="Images/Logos/dark-logo.png" class="brand-logo" alt="">
         <div class="items">
             <div class="search">
-                <input type="text" id="search-bar" onkeyup="search_products()" name="search" placeholder="Search Product">
+                <input type="text" class="search-box" placeholder="Search Product">
                 <button class="search-btn"> search</button>
-                 
-                 <script src="JS/products.js"></script>
             </div>
             <a href="#"> <img src="Images/buttons/user.png" alt=""></a>
             <a href="#"> <img src="Images/buttons/cart.png" alt=""></a>
@@ -33,7 +31,6 @@
     <li class="link-item"> <a href="#" class="link"> Merch</a></li>
     </ul>
     </nav>
-    <hr>
     <br>
     <h2 class="best-seller"> This Weeks Best Sellers</h2>
     <button class="pre-btn"><img src="Images/buttons/arrow.png" alt=""></button>
@@ -158,7 +155,7 @@
             <p class="collection-title"> <br> Coffee </p>
         </a>
         <a href="#" class="collection">
-            <img src="Images/Tea/matcha.jpeg" alt="" width="224" height="224">
+            <img src="Images/Tea/matcha.jpeg" alt="" width="600px" >
             <p class="collection-title"> <br> Tea </p>
         </a>
         <a href="#" class="collection">
