--- a/product.html
+++ b/product.html
@@ -57,7 +57,7 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="product-image">
+            <div class="product">
                 <span class="discount-tag"></span>
                 <img src="Images/Muffins/banana.jpg" class="product-thumb" alt="" width="1024" height="1024">
                 <button class="card-btn">Add to cart</button>
@@ -69,7 +69,7 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="product-image">
+            <div class="product">
                 <span class="discount-tag"></span>
                 <img src="Images/Muffins/chocolatechip.jpeg" class="product-thumb" alt="" width="1024" height="1024">
                 <button class="card-btn">Add to cart</button>
@@ -81,7 +81,7 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="product-image">
+            <div class="product">
                 <span class="discount-tag"></span>
                 <img src="Images/Muffins/cinnamon.jpeg" class="product-thumb" alt="" width="1024" height="1024">
                 <button class="card-btn">Add to cart</button>
