--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </ul>
     </nav>
     <br>
+    <section class="product">
     <h2 class="best-seller"> This Weeks Best Sellers</h2>
     <button class="pre-btn"><img src="Images/buttons/arrow.png" alt=""></button>
     <button class="nxt-btn"><img src="Images/buttons/arrow.png" alt=""></button>
