--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
     <li class="link-item"> <a href="#" class="link"> Merch</a></li>
     </ul>
     </nav>
+    <header class="hero-section">
+        <div class="content">
+            <img src="Images/Logos/logo-header.png" alt="" class="logo">
+            <p class="sub-heading"> Best Coffee In Utah</p>
+        </div>
+    </header>
     <br>
     <section class="product">
     <h2 class="best-seller"> This Weeks Best Sellers</h2>
+    <section class="product-container">
     <button class="pre-btn"><img src="Images/buttons/arrow.png" alt=""></button>
     <button class="nxt-btn"><img src="Images/buttons/arrow.png" alt=""></button>
-    <section class="product-container">
-
+    
         <div class="product-card">
             <div class="product-image">
                 <span class="discount-tag"></span>
@@ -147,27 +153,33 @@
             </div>
         </div>
     </section>
+    <br>
     <hr>
     <br>
+    <h2 class="sell">  What We Sell:</h2>
     <section class="collection-container">
-        <h2> What We Sell </h2>
         <a href="#" class="collection">
-            <img src="Images/Coffee/ColdBrew.jpeg" alt="" width="600" height="600">
-            <p class="collection-title"> <br> Coffee </p>
+            <img src="Images/Coffee/ColdBrew.jpeg" alt="">
+            <p class="collection-title">Coffee</p>
         </a>
         <a href="#" class="collection">
-            <img src="Images/Tea/matcha.jpeg" alt="" width="600px" >
-            <p class="collection-title"> <br> Tea </p>
+            <img src="Images/Tea/sweet-tea.jpeg" alt="">
+            <p class="collection-title">Tea</p>
         </a>
         <a href="#" class="collection">
-            <img src="Images/Muffins/chocolatechip.jpeg" alt="" width="600" height="600">
-            <p class="collection-title"> <br> Breakfast </p>
+            <img src="Images/Muffins/chocolatechip.jpeg" alt="">
+            <p class="collection-title">Food</p>
         </a>
         <a href="#" class="collection">
-            <img src="Images/black.jpeg" alt="" width="600" height="600">
-            <p class="collection-title"> <br> Mugs</p>
+            <img src="Images/black.jpeg" alt="">
+            <p class="collection-title">Merch</p>
+            <a href="#" class="collection">
+                <img src="Images/cookies.jpeg" alt="">
+                <p class="collection-title">Cookies <br> And Cakes</p>
+            </a>
         </a>
     </section>
+    <br>
     <footer>
         <div class="footer-content">
             <img src="Images/Logos/light-logo.png" class="logo" alt="Light Logo">
