October 20, Adding the needed photos

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
-    <link rel="shortcut icon" href="Images/Logos/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <title>Generic Cafe</title>
 </head>
 
 <body>
     <nav id="top" class="navbar">
         <div class="nav">
-        <img src="Images/Logos/dark-logo.png" class="brand-logo" alt="">
+        <img src="img/Logos/dark-logo.png" class="brand-logo" alt="">
         <div class="items">
             <div class="search">
                 <input type="text" class="search-box" placeholder="Search Product">
@@ -33,7 +33,7 @@
     </nav>
     <header class="hero-section">
         <div class="content">
-            <img src="Images/Logos/logo-header.png" alt="" class="logo">
+            <img src="img\Logos\logo-header.png" alt="" class="logo">
             <p class="sub-heading"> Best Coffee In Utah</p>
         </div>
     </header>
@@ -182,7 +182,7 @@
     <br>
     <footer>
         <div class="footer-content">
-            <img src="Images/Logos/light-logo.png" class="logo" alt="Light Logo">
+            <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
                     <li class="category-title"> Coffee </li>
