--- a/product.html
+++ b/product.html
@@ -42,7 +42,7 @@
             </div>
         </div>
     </section>
-    <section class="product-container">
+    <section id="product-page">
 
         <div class="product-card">
             <div class="product-image">
@@ -57,19 +57,31 @@
             </div>
         </div>
         <div class="product-card">
-            <div class="product">
+            <div class="product-image">
                 <span class="discount-tag"></span>
                 <img src="Images/Muffins/banana.jpg" class="product-thumb" alt="" width="1024" height="1024">
                 <button class="card-btn">Add to cart</button>
             </div>
             <div class="product-info">
-                <h2 class="product-brand">Banana Nut Muffin</h2>
+                <h2 class="product-brand">Banana Nut Muffins</h2>
                 <p class="product-short-des"></p>
                 <span class="price">$3.99</span><span class="actual-price"></span>
             </div>
         </div>
         <div class="product-card">
-            <div class="product">
+            <div class="product-image">
+                <span class="discount-tag"></span>
+                <img src="Images/Muffins/cinnamon.jpeg" class="product-thumb" alt="" width="1024" height="1024">
+                <button class="card-btn">Add to cart</button>
+            </div>
+            <div class="product-info">
+                <h2 class="product-brand">Cinnamon Muffin</h2>
+                <p class="product-short-des"></p>
+                <span class="price">$3.99</span><span class="actual-price"></span>
+            </div>
+        </div>
+        <div class="product-card">
+            <div class="product-image">
                 <span class="discount-tag"></span>
                 <img src="Images/Muffins/chocolatechip.jpeg" class="product-thumb" alt="" width="1024" height="1024">
                 <button class="card-btn">Add to cart</button>
@@ -80,20 +92,9 @@
                 <span class="price">$3.99</span><span class="actual-price"></span>
             </div>
         </div>
-        <div class="product-card">
-            <div class="product">
-                <span class="discount-tag"></span>
-                <img src="Images/Muffins/cinnamon.jpeg" class="product-thumb" alt="" width="1024" height="1024">
-                <button class="card-btn">Add to cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Cinnamon Muffin</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$2.99</span><span class="actual-price"></span>
-            </div>
-        </div>
         </section>
-   
+   <br>
+   <br>
     <footer> <div class="footer-content">
         <img src="Images/Logos/light-logo.png" class="logo" alt="Light Logo">
         <div class="footer-ul-container">
