Fixed the images

--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="Images/Logos/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/styles.css">
    
     <title>Product Page</title>
@@ -14,14 +14,14 @@
 <body>
     <nav id="top" class="navbar">
         <div class="nav">
-        <img src="Images/Logos/dark-logo.png" class="brand-logo" alt="">
+        <img src="img/Logos/dark-logo.png" class="brand-logo" alt="">
         <div class="items">
             <div class="search">
                 <input type="text" class="search-box" placeholder="Search Product">
                 <button class="search-btn"> search</button>
             </div>
-            <a href="#"> <img src="Images/buttons/user.png" alt=""></a>
-            <a href="#"> <img src="Images/buttons/cart.png" alt=""></a>
+            <a href="#"> <img src="img/buttons/user.png" alt=""></a>
+            <a href="#"> <img src="img/buttons/cart.png" alt=""></a>
         </div>
     </div>
      <ul class="link-container">
@@ -96,7 +96,7 @@
    <br>
    <br>
     <footer> <div class="footer-content">
-        <img src="Images/Logos/light-logo.png" class="logo" alt="Light Logo">
+        <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
         <div class="footer-ul-container">
             <ul class="category">
                 <li class="category-title"> Coffee </li>
