Final Commit of the day

--- a/product.html
+++ b/product.html
@@ -92,6 +92,18 @@
                 <span class="price">$3.99</span><span class="actual-price"></span>
             </div>
         </div>
+        <div class="product-card">
+            <div class="product-image">
+                <span class="discount-tag"></span>
+                <img src="img/Product/oriol-portell-MZxSQPSOexI-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                <button class="card-btn">Add to cart</button>
+            </div>
+            <div class="product-info">
+                <h2 class="product-brand">Double Chocoalte Muffin</h2>
+                <p class="product-short-des"></p>
+                <span class="price">$3.99</span><span class="actual-price"></span>
+            </div>
+        </div>
         </section>
    <br>
    <br>
@@ -120,7 +132,8 @@
                 <li> <a href="#" class="footer-link">Chocolate Chip</a></li>
                 <li> <a href="#" class="footer-link"> Cinnamon </a></li>
                 <li> <a href="#" class="footer-link"> Blueberry</a></li>
-            </ul>
+                <li> <a href="#" class="footer-link"> Double Chocolate</a></li>
+            </ul> 
         </div>
     </div>
 
