Working on footer, and products

--- a/index.html
+++ b/index.html
@@ -226,7 +226,11 @@
             <a href="#" class="social-link"> Instagram</a>
             <a href="#top" class="social-link"> Back To Top</a>
         </div>
-        <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022.</p>
+        <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were found on Unsplash, <a href="">here is credit</a> to them all.
+        </p>
+        <br>
+        <br>
+    
     </footer>
 <script src="JS/home.js"></script>
 
