October 24, 2022: Adding a whole unch of things, and fixing things.

--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
                 <input type="text" class="search-box" placeholder="Search Product">
                 <button class="search-btn"> search</button>
             </div>
-            <a href="#"> <img src="Images/buttons/user.png" alt=""></a>
-            <a href="#"> <img src="Images/buttons/cart.png" alt=""></a>
+            <a href="#"> <img src="img/buttons/user.png" alt=""></a>
+            <a href="#"> <img src="img/buttons/cart.png" alt=""></a>
         </div>
     </div>
      <ul class="link-container">
      <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
     <li class="link-item"> <a href="#" class="link">Coffee</a></li>
     <li class="link-item"> <a href="#" class="link"> Tea</a></li>
-    <li class="link-item"> <a href="product.html" class="link"> Food</a></li>
-    <li class="link-item"> <a href="#" class="link"> Merch</a></li>
-    </ul>
-    </nav>
-    <header class="hero-section">
+    <li class="link-item"> <a href="food.html"class="link" > Food</a></li>
+    <li class="link-item"> <a href="#" class="link">Beans</a></li>
+</ul>
+</nav>
+<header class="hero-section">
+        <img src="img\Logos\logo-header.png" alt="" class="logo">
         <div class="content">
-            <img src="img\Logos\logo-header.png" alt="" class="logo">
             <p class="sub-heading"> Best Coffee In Utah</p>
         </div>
     </header>
@@ -171,11 +171,12 @@
         </a>
         <a href="#" class="collection">
             <img src="img/Product/ari-spada-RCYrA-AiFSo-unsplash.jpg" alt="">
-            <p class="collection-title">Food</p>
+            <p class="collection-title">Foods</p>
+        </a>  
+         <a href="#" class="collection">
+            <img src="img/Product/pablo-merchan-montes-SCbq6uKCyMY-unsplash.jpg" alt="">
+            <p class="collection-title">Beans</p>
         </a>
-        <a href="#" class="collection">
-            <img src="Images/black.jpeg" alt="">
-            <p class="collection-title">Merch</p>
             <a href="#" class="collection">
                 <img src="Images/cookies.jpeg" alt="">
                 <p class="collection-title">Cookies <br> And Cakes</p>
@@ -206,12 +207,12 @@
                 </ul>
                 <br>
                 <ul class="category">
-                    <li class="category-title"> Muffins</li>
-                    <li> <a href="#" class="footer-link"> Banana Nut</a></li>
-                    <li> <a href="#" class="footer-link">Chocolate Chip</a></li>
-                    <li> <a href="#" class="footer-link"> Cinnamon </a></li>
-                    <li> <a href="#" class="footer-link"> Blueberry</a></li>
-                    <li> <a href="#" class="footer-link"> Double Chocolate Chip</a></li>
+                    <li class="category-title"> Food</li>
+                    <li> <a href="#" class="footer-link"> Muffins</a></li>
+                    <li> <a href="#" class="footer-link">Cookies</a></li>
+                    <li> <a href="#" class="footer-link"> Brownies </a></li>
+                    <li> <a href="#" class="footer-link"> Cakes</a></li>
+                    <li> <a href="#" class="footer-link"> Sandwhiches</a></li>
                 </ul>
                 
             </div>
@@ -226,7 +227,7 @@
             <a href="#" class="social-link"> Instagram</a>
             <a href="#top" class="social-link"> Back To Top</a>
         </div>
-        <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were found on Unsplash, <a href="">here is credit</a> to them all.
+        <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022. All images were found on Unsplash, <a href="credit.html">here is credit</a> to them all.
         </p>
         <br>
         <br>
