Chaning and adding Images

--- a/food.html
+++ b/food.html
@@ -122,16 +122,14 @@
    <section class="product">
    <h2 class="best-seller"> Cookies and Brownies</h2>
    <section class="product-container">
-    <button class="pre-btn cookie"><img src="img/buttons/arrow.png" alt="" width="13" heoght="22" ></button>
-    <button class="nxt-btn cookie"><img src="img/buttons/arrow.png" alt=""></button>
     <div class="product-card">
         <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+            <img src="Images/cookies.jpeg" class="product-thumb" alt="" width="1024" height="1024">
             <button class="card-btn">Add to cart</button>
         </div>
         <div class="product-info">
-            <h2 class="product-brand">Blueberry Muffin</h2>
+            <h2 class="product-brand">Chocolate Chip Cookie</h2>
             <p class="product-short-des"> One Cookie</p>
             <span class="price">$.99</span><span class="actual-price"></span>
         </div>
