--- a/food.html
+++ b/food.html
@@ -7,48 +7,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="CSS/styles.css">
-   
+
     <title>Product Page</title>
 </head>
 
 <body>
     <nav id="top" class="navbar">
         <div class="nav">
-        <img src="img/Logos/dark-logo.png" class="brand-logo" alt="">
-        <div class="items">
-            <div class="search">
-                <input type="text" class="search-box" placeholder="Search Product">
-                <button class="search-btn"> search</button>
+            <img src="img/Logos/dark-logo.png" class="brand-logo" alt="">
+            <div class="items">
+                <div class="search">
+                    <input type="text" class="search-box" placeholder="Search Product">
+                    <button class="search-btn"> search</button>
+                </div>
+                <a href="#"> <img src="img/buttons/user.png" alt=""></a>
+                <a href="#"> <img src="img/buttons/cart.png" alt=""></a>
             </div>
-            <a href="#"> <img src="img/buttons/user.png" alt=""></a>
-            <a href="#"> <img src="img/buttons/cart.png" alt=""></a>
         </div>
-    </div>
-     <ul class="link-container">
-     <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
-    <li class="link-item"> <a href="#" class="link">Coffee</a></li>
-    <li class="link-item"> <a href="#" class="link"> Tea</a></li>
-    <li class="link-item"> <a href="food.html" class="link"> Food</a></li>
-    <li class="link-item"> <a href="#" class="link">Beans</a></li>
-    </ul>
+        <ul class="link-container">
+            <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
+            <li class="link-item"> <a href="#" class="link">Coffee</a></li>
+            <li class="link-item"> <a href="#" class="link"> Tea</a></li>
+            <li class="link-item"> <a href="food.html" class="link"> Food</a></li>
+            <li class="link-item"> <a href="#" class="link">Beans</a></li>
+        </ul>
     </nav>
     <header class="hero-section food">
         <div class="content">
-            <img src="img\Logos\logo-header.png" alt="" class="logo">
+            <img src="img/Logos/logo-header.png" alt="" class="logo">
             <p class="sub-heading"> Freshly Baked Every Day</p>
         </div>
     </header>
     <hr>
     <section class="product">
-        <button class="pre-btn"><img src="img/buttons/arrow.png" alt="" width="13" heoght="22" ></button>
+        <button class="pre-btn"><img src="img/buttons/arrow.png" alt="" width="13" height="22"></button>
         <button class="nxt-btn"><img src="img/buttons/arrow.png" alt=""></button>
         <h2 class="best-seller"> Muffins</h2>
         <section class="product-container">
-           
+
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" class="product-thumb" alt=""
+                        width="1024" height="1024">
                     <button class="card-btn">Add to cart</button>
                 </div>
                 <div class="product-info">
@@ -72,7 +73,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/alina-karpenko-d8GDJalt_BE-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <img src="img/Product/alina-karpenko-d8GDJalt_BE-unsplash.jpg" class="product-thumb" alt=""
+                        width="1024" height="1024">
                     <button class="card-btn">Add to cart</button>
                 </div>
                 <div class="product-info">
@@ -84,7 +86,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <img src="img/Product/joshua-flores-5RQffqRkmWQ-unsplash.jpg" class="product-thumb" alt=""
+                        width="1024" height="1024">
                     <button class="card-btn">Add to cart</button>
                 </div>
                 <div class="product-info">
@@ -96,7 +99,8 @@
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/oriol-portell-MZxSQPSOexI-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <img src="img/Product/oriol-portell-MZxSQPSOexI-unsplash.jpg" class="product-thumb" alt=""
+                        width="1024" height="1024">
                     <button class="card-btn">Add to cart</button>
                 </div>
                 <div class="product-info">
@@ -104,11 +108,12 @@
                     <p class="product-short-des"></p>
                     <span class="price">$3.99</span><span class="actual-price"></span>
                 </div>
-            </div> 
+            </div>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
-                    <img src="img/Product/fallon-michael-0-xIKrdFj4I-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <img src="img/Product/fallon-michael-0-xIKrdFj4I-unsplash.jpg" class="product-thumb" alt=""
+                        width="1024" height="1024">
                     <button class="card-btn">Add to cart</button>
                 </div>
                 <div class="product-info">
@@ -116,66 +121,67 @@
                     <p class="product-short-des"></p>
                     <span class="price">$3.99</span><span class="actual-price"></span>
                 </div>
-            </div>   
-   </section>
-   </section>
-   <section class="product">
-   <h2 class="best-seller"> Cookies and Brownies</h2>
-   <section class="product-container">
-    <div class="product-card">
-        <div class="product-image">
-            <span class="discount-tag"></span>
-            <img src="Images/cookies.jpeg" class="product-thumb" alt="" width="1024" height="1024">
-            <button class="card-btn">Add to cart</button>
-        </div>
-        <div class="product-info">
-            <h2 class="product-brand">Chocolate Chip Cookie</h2>
-            <p class="product-short-des"> One Cookie</p>
-            <span class="price">$.99</span><span class="actual-price"></span>
-        </div>
-    </div>
+            </div>
+        </section>
     </section>
-   </section>
-   <br>
-    <footer> <div class="footer-content">
-        <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
-        <div class="footer-ul-container">
-            <ul class="category">
-                <li class="category-title"> Coffee </li>
-                <li><a href="#" class="footer-link"> Cold Brew </a> </li>
-                <li> <a href="#" class="footer-link"> Caramel Frappe </a></li>
-                <li><a href="#" class="footer-link"> Black Coffee </a> </li>
-                <li><a href="#" class="footer-link"> Latte </a> </li>
-                <li><a href="#" class="footer-link"> Mocha </a> </li>
-            </ul>
-            <ul class="category">
-                <li class="category-title"> Tea</li>
-                <li> <a href="#" class="footer-link"> Black Tea</a> </li>
-                <li> <a href="#" class="footer-link"> Chai Tea</a> </li>
-                <li> <a href="#" class="footer-link"> Earl Gray</a></li>
-                <li> <a href="#" class="footer-link"> Matcha</a></li>
-                <li> <a href="#" class="footer-link"> Sweet Tea</a></li>
-            </ul>
-            <ul class="category">
-                <li class="category-title"> Muffins</li>
-                <li> <a href="#" class="footer-link"> Banana Nut</a></li>
-                <li> <a href="#" class="footer-link">Chocolate Chip</a></li>
-                <li> <a href="#" class="footer-link"> Cinnamon </a></li>
-                <li> <a href="#" class="footer-link"> Blueberry</a></li>
-            </ul> 
+    <section class="product">
+        <h2 class="best-seller"> Cookies and Brownies</h2>
+        <section class="product-container">
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag"></span>
+                    <img src="Images/cookies.jpeg" class="product-thumb" alt="" width="1024" height="1024">
+                    <button class="card-btn">Add to cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Chocolate Chip Cookie</h2>
+                    <p class="product-short-des"> One Cookie</p>
+                    <span class="price">$.99</span><span class="actual-price"></span>
+                </div>
+            </div>
+        </section>
+    </section>
+    <br>
+    <footer>
+        <div class="footer-content">
+            <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
+            <div class="footer-ul-container">
+                <ul class="category">
+                    <li class="category-title"> Coffee </li>
+                    <li><a href="#" class="footer-link"> Cold Brew </a> </li>
+                    <li> <a href="#" class="footer-link"> Caramel Frappe </a></li>
+                    <li><a href="#" class="footer-link"> Black Coffee </a> </li>
+                    <li><a href="#" class="footer-link"> Latte </a> </li>
+                    <li><a href="#" class="footer-link"> Mocha </a> </li>
+                </ul>
+                <ul class="category">
+                    <li class="category-title"> Tea</li>
+                    <li> <a href="#" class="footer-link"> Black Tea</a> </li>
+                    <li> <a href="#" class="footer-link"> Chai Tea</a> </li>
+                    <li> <a href="#" class="footer-link"> Earl Gray</a></li>
+                    <li> <a href="#" class="footer-link"> Matcha</a></li>
+                    <li> <a href="#" class="footer-link"> Sweet Tea</a></li>
+                </ul>
+                <ul class="category">
+                    <li class="category-title"> Muffins</li>
+                    <li> <a href="#" class="footer-link"> Banana Nut</a></li>
+                    <li> <a href="#" class="footer-link">Chocolate Chip</a></li>
+                    <li> <a href="#" class="footer-link"> Cinnamon </a></li>
+                    <li> <a href="#" class="footer-link"> Blueberry</a></li>
+                </ul>
+            </div>
         </div>
-    </div>
 
-    <p class="footer-title"> About Our Company</p>
-    <p class="info"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque id optio, aliquam, enim neque
-        numquam totam laudantium dolore voluptatum placeat odit quos. Fuga, ducimus veniam? Architecto dolor fugit
-        veritatis libero!</p>
-    <div class="footer-social-container">
-        <a href="#" class="social-link"> Facebook</a>
-        <a href="#" class="social-link"> Instagram</a>
-        <a href="#top" class="social-link"> Back To Top</a>
-    </div>
-    <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022.</p>
+        <p class="footer-title"> About Our Company</p>
+        <p class="info"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque id optio, aliquam, enim neque
+            numquam totam laudantium dolore voluptatum placeat odit quos. Fuga, ducimus veniam? Architecto dolor fugit
+            veritatis libero!</p>
+        <div class="footer-social-container">
+            <a href="#" class="social-link"> Facebook</a>
+            <a href="#" class="social-link"> Instagram</a>
+            <a href="#top" class="social-link"> Back To Top</a>
+        </div>
+        <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022.</p>
     </footer>
     <script src="JS/home.js"></script>
 </body>
