--- a/credit.html
+++ b/credit.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="link-container">
             <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
-            <li class="link-item"> <a href="#" class="link">Coffee</a></li>
+            <li class="link-item"> <a href="coffee.html" class="link">Coffee</a></li>
             <li class="link-item"> <a href="#" class="link"> Tea</a></li>
             <li class="link-item"> <a href="food.html" class="link"> Food</a></li>
             <li class="link-item"> <a href="#" class="link">Beans</a></li>
