--- a/food.html
+++ b/food.html
@@ -26,19 +26,20 @@
         </div>
         <ul class="link-container">
             <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
-            <li class="link-item"> <a href="#" class="link">Coffee</a></li>
-            <li class="link-item"> <a href="#" class="link"> Tea</a></li>
+            <li class="link-item"> <a href="coffee.html" class="link">Coffee</a></li>
+            <li class="link-item"> <a href="tea.html" class="link"> Tea</a></li>
             <li class="link-item"> <a href="food.html" class="link"> Food</a></li>
             <li class="link-item"> <a href="#" class="link">Beans</a></li>
         </ul>
     </nav>
-    <header class="hero-section food">
+    <header class="food-hero-section">
         <div class="content">
-            <img src="img/Logos/logo-header.png" alt="" class="logo">
+            <img src="img/Logos/" alt="" class="ogo">
             <p class="sub-heading"> Freshly Baked Every Day</p>
         </div>
     </header>
     <hr>
+    <!-- Muffin Ssection-->
     <section class="product">
         <button class="pre-btn"><img src="img/buttons/arrow.png" alt="" width="13" height="22"></button>
         <button class="nxt-btn"><img src="img/buttons/arrow.png" alt=""></button>
@@ -124,9 +125,14 @@
             </div>
         </section>
     </section>
+    <!-- End Muffin-->
+    <hr>
+    <!-- Cookies and Brownies Section-->
     <section class="product">
         <h2 class="best-seller"> Cookies and Brownies</h2>
         <section class="product-container">
+            <button class="two-pre"><img src="img/buttons/arrow.png" alt="" width="13" height="22"></button>
+        <button class="two-nxt"><img src="img/buttons/arrow.png" alt=""></button>
             <div class="product-card">
                 <div class="product-image">
                     <span class="discount-tag"></span>
@@ -141,7 +147,9 @@
             </div>
         </section>
     </section>
+    <!-- End Cookies and Brownies-->
     <br>
+    <!-- Footer Start-->
     <footer>
         <div class="footer-content">
             <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
@@ -183,6 +191,7 @@
         </div>
         <p class="footer-credit"> This website was made by Arlo Jackson starting on October 11, 2022.</p>
     </footer>
+    <!-- Footer End-->
     <script src="JS/home.js"></script>
 </body>
 
