--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <!-- Navigation Start-->
     <nav id="top" class="navbar">
         <div class="nav">
             <img src="img/Logos/dark-logo.png" class="brand-logo" alt="">
@@ -25,8 +26,8 @@
         </div>
         <ul class="link-container">
             <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
-            <li class="link-item"> <a href="#" class="link">Coffee</a></li>
-            <li class="link-item"> <a href="#" class="link"> Tea</a></li>
+            <li class="link-item"> <a href="coffee.html" class="link">Coffee</a></li>
+            <li class="link-item"> <a href="tea.html" class="link"> Tea</a></li>
             <li class="link-item"> <a href="food.html" class="link"> Food</a></li>
             <li class="link-item"> <a href="#" class="link">Beans</a></li>
         </ul>
@@ -34,11 +35,13 @@
     <header class="hero-section">
         <img src="img\Logos\logo-header.png" alt="" class="logo">
         <div class="content">
-            <p class="sub-heading"> Best Coffee In Utah</p>
+            <p class="sub-heading"> Best Cafe In Utah</p>
         </div>
     </header>
+    <!-- Nav End-->
     <hr>
     <br>
+    <!-- Weeks Top Seller: Start-->
     <section class="product">
         <h2 class="best-seller"> This Weeks Best Sellers</h2>
         <section class="product-container">
@@ -162,9 +165,11 @@
 
         </section>
     </section>
+    <!-- Weeks Top End-->
     <br>
     <hr>
     <br>
+    <!-- Collection Start-->
     <h2 class="sell"> What We Sell:</h2>
     <section class="collection-container">
         <a href="#" class="collection">
@@ -189,7 +194,9 @@
         </a>
         </a>
     </section>
+    <!-- Collection End-->
     <br>
+    <!-- Footer Start-->
     <footer>
         <div class="footer-content">
             <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
@@ -240,7 +247,7 @@
         <br>
 
     </footer>
-    <script src="JS/home.js"></script>
+    <!--footer End-->
 
 </body>
 
