--- a/search.html
+++ b/search.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,139 +10,44 @@
     <link rel="stylesheet" href="CSS/search.css">
     <link rel="shortcut icon" href="Images/Logos/favicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <nav id="top" class="navbar">
         <div class="nav">
-        <img src="Images/Logos/dark-logo.png" class="brand-logo" alt="">
-        <div class="items">
-            <div class="search">
-                <input type="text" class="search-box" placeholder="Search Product">
-                <button class="search-btn"> search</button>
-            </div>
-            <a href="#"> <img src="Images/buttons/user.png" alt=""></a>
-            <a href="#"> <img src="Images/buttons/cart.png" alt=""></a>
-        </div>
-    </div>
-     <ul class="link-container">
-     <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
-    <li class="link-item"> <a href="#" class="link">Coffee</a></li>
-    <li class="link-item"> <a href="#" class="link"> Tea</a></li>
-    <li class="link-item"> <a href="product.html" class="link"> Food</a></li>
-    <li class="link-item"> <a href="#" class="link"> Merch</a></li>
-    </ul>
-    </nav> 
-   <section class="search-results">
-    <h2 class="heading"> Search Results for <span>Product</span></h2>>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Muffins/blueberry.jpg" class="product-thumb" alt="" width="1024" height="1024">
-                <button class="card-btn">Add to cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Blueberry Muffin</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$3.99</span><span class="actual-price"></span>
+            <img src="Images/Logos/dark-logo.png" class="brand-logo" alt="">
+            <div class="items">
+                <form role="search" id="form">
+                    <input type="search" id="query" name="q" placeholder="Search" aria-label="Search through the sites content">
+                    <button> <svg viewBox="0 0 1024 1024">
+                            <path class="path1"
+                                d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
+                            </path>
+                        </svg>
+                    </button>
+            
+                </form>
+                <a href="#"> <img src="Images/buttons/user.png" alt=""></a>
+                <a href="#"> <img src="Images/buttons/cart.png" alt=""></a>
             </div>
         </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Coffee/ColdBrew.jpeg" class="product-thumb" alt="" width="600" height="600">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand"> Cold Brew</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$4.55</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Coffee/Frappe.jpeg" class="product-thumb" alt="" width="183" height="275">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand"> Caramel Frappe</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$6.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Tea/black-tea.jpeg" class="product-thumb" alt="" width="353" height="143">
-                <button class="card-btn">Add to cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Black Tea</h2>
-                <p class="product-short-des"> No Sweetening</p>
-                <span class="price">$2.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Tea/matcha.jpeg" class="product-thumb" alt="" width="224" height="224">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Matcha Tea</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$5.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Muffins/banana.jpg" class="product-thumb" alt="" width="1024" height="1024">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Banana Nut Muffins</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$2.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Muffins/chocolatechip.jpeg" class="product-thumb" alt="" width="225" height="225">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Chocolate Chip Muffins</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$3.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Coffee/Latte1.jpeg" class="product-thumb" alt="" width="225" height="225">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Latte</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$5.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-        <div class="product-card">
-            <div class="product-image">
-                <span class="discount-tag"></span>
-                <img src="Images/Tea/sweet-tea.jpeg" class="product-thumb" alt="" width="750" height="750">
-                <button class="card-btn">Add to Cart</button>
-            </div>
-            <div class="product-info">
-                <h2 class="product-brand">Sweet Tea</h2>
-                <p class="product-short-des"></p>
-                <span class="price">$3.99</span><span class="actual-price"></span>
-            </div>
-        </div>
-   </section>
-   <footer></footer>
-   <script src="JS/nav.js"></script>
+        <ul class="link-container">
+            <li class="link-item"> <a href="index.html" class="link"> Home</a></li>
+            <li class="link-item"> <a href="#" class="link">Coffee</a></li>
+            <li class="link-item"> <a href="#" class="link"> Tea</a></li>
+            <li class="link-item"> <a href="product.html" class="link"> Food</a></li>
+            <li class="link-item"> <a href="#" class="link"> Merch</a></li>
+        </ul>
+    </nav>
+    <form role="search" id="form">
+        <input type="search" id="query" name="q" placeholder="Search" aria-label="Search through the sites content">
+        <button> <svg viewBox="0 0 1024 1024">
+                <path class="path1"
+                    d="M848.471 928l-263.059-263.059c-48.941 36.706-110.118 55.059-177.412 55.059-171.294 0-312-140.706-312-312s140.706-312 312-312c171.294 0 312 140.706 312 312 0 67.294-24.471 128.471-55.059 177.412l263.059 263.059-79.529 79.529zM189.623 408.078c0 121.364 97.091 218.455 218.455 218.455s218.455-97.091 218.455-218.455c0-121.364-103.159-218.455-218.455-218.455-121.364 0-218.455 97.091-218.455 218.455z">
+                </path>
+            </svg>
+        </button>
+
+    </form>
 </body>
+
 </html>
