End of class, Oct 26

--- a/coffee.html
+++ b/coffee.html
@@ -38,7 +38,7 @@
     <header class="hero-section">
         <img src="img\Logos\logo-header.png" alt="" class="logo">
         <div class="content">
-            <p class="sub-heading"> Best Coffee In Utah</p>
+            <p class="sub-heading"> </p>
         </div>
     </header>
     <hr>
