--- a/index.html
+++ b/index.html
@@ -172,15 +172,15 @@
     <!-- Collection Start-->
     <h2 class="sell"> What We Sell:</h2>
     <section class="collection-container">
-        <a href="#" class="collection">
+        <a href="coffee.html" class="collection">
             <img src="img/Product/tabitha-turner-F0Wd4djYvSA-unsplash.jpg" alt="">
             <p class="collection-title">Coffee</p>
         </a>
-        <a href="#" class="collection">
+        <a href="tea.html" class="collection">
             <img src="Images/Tea/sweet-tea.jpeg" alt="">
             <p class="collection-title">Tea</p>
         </a>
-        <a href="#" class="collection">
+        <a href="food.html" class="collection">
             <img src="img/Product/ari-spada-RCYrA-AiFSo-unsplash.jpg" alt="">
             <p class="collection-title">Foods</p>
         </a>
@@ -188,7 +188,7 @@
             <img src="img/Product/pablo-merchan-montes-SCbq6uKCyMY-unsplash.jpg" alt="">
             <p class="collection-title">Beans</p>
         </a>
-        <a href="#" class="collection">
+        <a href="food.html" class="collection">
             <img src="Images/cookies.jpeg" alt="">
             <p class="collection-title">Cookies <br> And Cakes</p>
         </a>
