--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
-    <title>Generic Cafe</title>
+    <title>Hive Mind</title>
 </head>
 
 <body>
@@ -35,7 +35,7 @@
     <header class="hero-section">
         <img src="img\Logos\logo-header.png" alt="" class="logo">
         <div class="content">
-            <p class="sub-heading"> Best Cafe In Utah</p>
+            <p class="sub-heading"> Sweetest In Utah</p>
         </div>
     </header>
     <!-- Nav End-->
@@ -199,7 +199,7 @@
     <!-- Footer Start-->
     <footer>
         <div class="footer-content">
-            <img src="img/Logos/light-logo.png" class="logo" alt="Light Logo">
+            <img src="img/Logos/dark-logo.png" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
                     <li class="category-title"> Coffee </li>
