End of day, October 28 2022

--- a/food.html
+++ b/food.html
@@ -145,6 +145,66 @@
                     <span class="price">$.99</span><span class="actual-price"></span>
                 </div>
             </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag"></span>
+                    <img src="img/Product/gayatri-malhotra-OKUGCTLvSw4-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <button class="card-btn">Add to cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Snickerdoodle</h2>
+                    <p class="product-short-des"> One Cookie</p>
+                    <span class="price">$1.05</span><span class="actual-price"></span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag"></span>
+                    <img src="img/Product/madison-kaminski-2c6_d8svbkY-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <button class="card-btn">Add to cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Peanut Butter Kiss</h2>
+                    <p class="product-short-des"> One Cookie</p>
+                    <span class="price">$1.30</span><span class="actual-price"></span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag"></span>
+                    <img src="img/Product/pexels-terrance-barksdale-8837096.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <button class="card-btn">Add to cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">oatmeal Raisian Cookie</h2>
+                    <p class="product-short-des"> One Cookie</p>
+                    <span class="price">$.99</span><span class="actual-price"></span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag"></span>
+                    <img src="img/Product/american-heritage-chocolate-DoK5qEy2L60-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <button class="card-btn">Add to cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Chocolate Peanut Cookie</h2>
+                    <p class="product-short-des"> One Cookie</p>
+                    <span class="price">$1.30</span><span class="actual-price"></span>
+                </div>
+            </div>
+            <div class="product-card">
+                <div class="product-image">
+                    <span class="discount-tag"></span>
+                    <img src="img/Product/steven-weeks-iQq1NyJj-n8-unsplash.jpg" class="product-thumb" alt="" width="1024" height="1024">
+                    <button class="card-btn">Add to cart</button>
+                </div>
+                <div class="product-info">
+                    <h2 class="product-brand">Macarons</h2>
+                    <p class="product-short-des"> For 2</p>
+                    <span class="price">$2.99</span><span class="actual-price"></span>
+                </div>
+            </div>
         </section>
     </section>
     <!-- End Cookies and Brownies-->
