--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="shortcut icon" href="img/Logos/favicon.ico" type="image/x-icon">
+    <script src="JS/home.js"></script>
     <title>Hive Mind</title>
+
+
+
 </head>
 
 <body>
@@ -170,7 +174,6 @@
     <hr>
     <br>
     <!-- Collection Start-->
-    <h2 class="sell"> What We Sell:</h2>
     <section class="collection-container">
         <a href="coffee.html" class="collection">
             <img src="img/Product/tabitha-turner-F0Wd4djYvSA-unsplash.jpg" alt="">
