Trying out New nav system

--- a/index.html
+++ b/index.html
@@ -247,30 +247,15 @@
             <img src="img/Logos/dark-logo.png" class="logo" alt="Light Logo">
             <div class="footer-ul-container">
                 <ul class="category">
-                    <li class="category-title"> Coffee </li>
-                    <li><a href="#" class="footer-link"> Cold Brew </a> </li>
-                    <li> <a href="#" class="footer-link"> Caramel Frappe </a></li>
-                    <li><a href="#" class="footer-link"> Black Coffee </a> </li>
-                    <li><a href="#" class="footer-link"> Latte </a> </li>
-                    <li><a href="#" class="footer-link"> Mocha </a> </li>
+                    <li class="category-title"><a class="category-link" href="coffee.html"> Coffee</a> </li>
                 </ul>
                 <br>
                 <ul class="category">
-                    <li class="category-title"> Tea</li>
-                    <li> <a href="#" class="footer-link"> Black Tea</a> </li>
-                    <li> <a href="#" class="footer-link"> Chai Tea</a> </li>
-                    <li> <a href="#" class="footer-link"> Earl Gray</a></li>
-                    <li> <a href="#" class="footer-link"> Matcha</a></li>
-                    <li> <a href="#" class="footer-link"> Sweet Tea</a></li>
+                    <li class="category-title"> <a class="category-link" href="tea.html"> Tea</a></li>
                 </ul>
                 <br>
                 <ul class="category">
-                    <li class="category-title"> Food</li>
-                    <li> <a href="#" class="footer-link"> Muffins</a></li>
-                    <li> <a href="#" class="footer-link">Cookies</a></li>
-                    <li> <a href="#" class="footer-link"> Brownies </a></li>
-                    <li> <a href="#" class="footer-link"> Cakes</a></li>
-                    <li> <a href="#" class="footer-link"> Sandwhiches</a></li>
+                    <li class="category-title"> <a class="category-link" href="food.html"> Food</a> </li>
                 </ul>
 
             </div>
